--- a/expense.html
+++ b/expense.html
@@ -172,14 +172,195 @@
         }
     </style>
     <script src="./assets/js/auth.js"></script>
+    <style>
+        header {
+            background: linear-gradient(to right, #041c32, #064663);
+            color: white;
+            padding: 18px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        header h1 {
+            font-size: 26px;
+            font-weight: 600;
+            letter-spacing: .5px;
+        }
+
+        .profile-link {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
+            color: white;
+            font-weight: 500;
+        }
+
+        .profile-link img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 2px solid white;
+        }
+
+        /* Add to your CSS file */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+            background: #064663;
+            color: white;
+            position: relative;
+        }
+
+        .profile-dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .profile-link {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            text-decoration: none;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .profile-link:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateY(-2px);
+        }
+
+        #profileIcon {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .dropdown-arrow {
+            width: 16px;
+            height: 16px;
+            transition: transform 0.3s ease;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background: white;
+            min-width: 180px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            overflow: hidden;
+            z-index: 1000;
+
+        }
+
+        .dropdown-content a {
+            display: block;
+            padding: 12px 20px;
+            color: #333;
+            text-decoration: none;
+            transition: all 0.2s ease;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        .dropdown-content a:last-child {
+            border-bottom: none;
+        }
+
+        .dropdown-content a:hover {
+            background: #f8f9ff;
+            color: #667eea;
+            padding-left: 24px;
+        }
+
+        /* Show dropdown on hover */
+        .profile-dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .profile-dropdown:hover .dropdown-arrow {
+            transform: rotate(180deg);
+        }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            .navbar {
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .dropdown-content {
+                right: 50%;
+                transform: translateX(50%);
+                min-width: 160px;
+            }
+        }
+    </style>
+    <style>
+        .back-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #062b47;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 6px;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+
+        .back-btn:hover {
+            background-color: #055174;
+            /* Darker shade */
+            /* transform: scale(1.05); Slight zoom effect */
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
 
-    <header>
+    <header class="navbar">
         <h1>Expense Management</h1>
-        <p>Welcome, <span id="username">User</span>!</p>
+
+        <div class="profile-dropdown">
+            <a href="#" class="profile-link" id="profileLink">
+                <img src="./assets/images/icon2.png" alt="User Icon" id="profileIcon">
+                <span id="profile-text">Hi, User</span>
+                <svg class="dropdown-arrow" viewBox="0 0 24 24">
+                    <path d="M7 10l5 5 5-5z" />
+                </svg>
+            </a>
+
+            <!-- Dropdown Menu -->
+            <div class="dropdown-content" id="profileDropdown">
+                <a href="profile.html">View Profile</a>
+                <a href="#" id="logoutLink">Logout</a>
+            </div>
+        </div>
     </header>
+
+    <div style="display: flex; justify-content: center; margin-top: 5px;">
+        <a href="/" class="back-btn">
+            Back
+        </a>
+    </div>
 
     <main>
 
@@ -259,105 +440,8 @@
 
     </main>
 
-    <script>
-
-        // Username
-        let username = localStorage.getItem('username') || "Deepa";
-        document.getElementById('username').innerText = username;
-
-        // Expenses Storage
-        let expenses = JSON.parse(localStorage.getItem(username + '_expenses')) || [];
-        let editingIndex = -1;
-
-        // Add Expense
-        function addExpense() {
-            const amount = document.getElementById('expense-amount').value;
-            const category = document.getElementById('expense-category').value;
-            const date = document.getElementById('expense-date').value;
-            const desc = document.getElementById('expense-desc').value;
-
-            if (!amount || !category || !date) {
-                alert("Please fill all required fields!");
-                return;
-            }
-
-            const expense = { amount: parseFloat(amount), category, date, desc };
-
-            if (editingIndex >= 0) {
-                expenses[editingIndex] = expense;
-                editingIndex = -1;
-            } else {
-                expenses.push(expense);
-            }
-
-            localStorage.setItem(username + '_expenses', JSON.stringify(expenses));
-            document.getElementById('success-msg').innerText = "Expense saved successfully!";
-            setTimeout(() => { document.getElementById('success-msg').innerText = ""; }, 2000);
-
-            // Reset
-            document.getElementById('expense-amount').value = '';
-            document.getElementById('expense-category').value = '';
-            document.getElementById('expense-date').value = '';
-            document.getElementById('expense-desc').value = '';
-
-            renderExpenses();
-        }
-
-        // Render Table
-        function renderExpenses() {
-            const tbody = document.querySelector('#expense-table tbody');
-            tbody.innerHTML = '';
-
-            const search = document.getElementById('search').value.toLowerCase();
-            const filterCategory = document.getElementById('filter-category').value;
-            const startDate = document.getElementById('start-date').value;
-            const endDate = document.getElementById('end-date').value;
-
-            expenses.forEach((exp, index) => {
-                if (
-                    (filterCategory === '' || exp.category === filterCategory) &&
-                    (exp.desc.toLowerCase().includes(search)) &&
-                    (startDate === '' || exp.date >= startDate) &&
-                    (endDate === '' || exp.date <= endDate)
-                ) {
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = `
-<td>${exp.date}</td>
-<td>${exp.category}</td>
-<td>₹${exp.amount}</td>
-<td>${exp.desc}</td>
-<td>
-<button class="action-btn edit-btn" onclick="editExpense(${index})">Edit</button>
-<button class="action-btn delete-btn" onclick="deleteExpense(${index})">Delete</button>
-</td>`;
-                    tbody.appendChild(tr);
-                }
-            });
-        }
-
-        // Edit
-        function editExpense(index) {
-            const exp = expenses[index];
-            document.getElementById('expense-amount').value = exp.amount;
-            document.getElementById('expense-category').value = exp.category;
-            document.getElementById('expense-date').value = exp.date;
-            document.getElementById('expense-desc').value = exp.desc;
-            editingIndex = index;
-        }
-
-        // Delete
-        function deleteExpense(index) {
-            if (confirm("Are you sure you want to delete this expense?")) {
-                expenses.splice(index, 1);
-                localStorage.setItem(username + '_expenses', JSON.stringify(expenses));
-                renderExpenses();
-            }
-        }
-
-        renderExpenses();
-
-    </script>
-
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/expenses.js"></script>
 </body>
 
 </html>
