--- a/profile.html
+++ b/profile.html
@@ -1,231 +1,355 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>User Profile / Settings</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>User Profile / Settings</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-<style>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-*{box-sizing:border-box;}
+        body {
+            margin: 0;
+            font-family: "Poppins", sans-serif;
+            background: #eef3f8;
+        }
 
-body{
-    margin:0;
-    font-family:"Poppins",sans-serif;
-    background:#eef3f8;
-}
+        /* HEADER */
+        header {
+            background: #062b47;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 18px 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        }
 
-/* HEADER */
-header{
-    background:#062b47;
-    color:white;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:18px 20px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.3);
-}
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
 
-header h1{
-    margin:0;
-    font-size:24px;
-}
+        .profile-link {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            text-decoration: none;
+            color: white;
+        }
 
-.profile-link{
-    display:flex;
-    align-items:center;
-    gap:8px;
-    text-decoration:none;
-    color:white;
-}
+        .profile-link img {
+            width: 34px;
+            height: 34px;
+            border-radius: 50%;
+        }
 
-.profile-link img{
-    width:34px;
-    height:34px;
-    border-radius:50%;
-}
+        /* MAIN */
+        main {
+            padding: 25px;
+        }
 
-/* MAIN */
-main{
-    padding:25px;
-}
+        /* SECTION CARD */
+        .section-box {
+            background: white;
+            padding: 25px;
+            border-radius: 14px;
+            margin-bottom: 25px;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+        }
 
-/* SECTION CARD */
-.section-box{
-    background:white;
-    padding:25px;
-    border-radius:14px;
-    margin-bottom:25px;
-    box-shadow:0 6px 20px rgba(0,0,0,0.15);
-}
+        h2 {
+            margin: 0 0 12px 0;
+            font-weight: 600;
+            color: #062b47;
+        }
 
-h2{
-    margin:0 0 12px 0;
-    font-weight:600;
-    color:#062b47;
-}
+        label {
+            font-weight: 600;
+            color: #062b47;
+            display: block;
+            margin-top: 10px;
+        }
 
-label{
-    font-weight:600;
-    color:#062b47;
-    display:block;
-    margin-top:10px;
-}
+        /* INPUTS */
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            outline: none;
+        }
 
-/* INPUTS */
-input{
-    width:100%;
-    padding:10px;
-    margin-top:5px;
-    border-radius:6px;
-    border:1px solid #ccc;
-    outline:none;
-}
+        input:focus {
+            border-color: #0b6fa4;
+        }
 
-input:focus{
-    border-color:#0b6fa4;
-}
+        /* BUTTON */
+        button {
+            margin-top: 15px;
+            padding: 10px 18px;
+            background: #062b47;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 15px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
 
-/* BUTTON */
-button{
-    margin-top:15px;
-    padding:10px 18px;
-    background:#062b47;
-    color:white;
-    border:none;
-    border-radius:6px;
-    font-size:15px;
-    cursor:pointer;
-    transition:0.3s;
-}
+        button:hover {
+            background: #0b6fa4;
+        }
 
-button:hover{
-    background:#0b6fa4;
-}
+        .success {
+            color: green;
+            margin-top: 8px;
+            font-weight: 500;
+        }
 
-.success{
-    color:green;
-    margin-top:8px;
-    font-weight:500;
-}
+        .warning {
+            color: red;
+            font-weight: 500;
+        }
+    </style>
+    <script src="./assets/js/auth.js"></script>
+   <style>
+        
+        header {
+            background: linear-gradient(to right, #041c32, #064663);
+            color: white;
+            padding: 18px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
 
-.warning{
-    color:red;
-    font-weight:500;
-}
+        header h1 {
+            font-size: 26px;
+            font-weight: 600;
+            letter-spacing: .5px;
+        }
 
-</style>
-<script src="./assets/js/auth.js"></script>
+        .profile-link {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
+            color: white;
+            font-weight: 500;
+        }
+
+        .profile-link img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 2px solid white;
+        }
+        /* Add to your CSS file */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+            background: #064663;
+            color: white;
+            position: relative;
+        }
+
+        .profile-dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .profile-link {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            text-decoration: none;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .profile-link:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateY(-2px);
+        }
+
+        #profileIcon {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .dropdown-arrow {
+            width: 16px;
+            height: 16px;
+            transition: transform 0.3s ease;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background: white;
+            min-width: 180px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            overflow: hidden;
+            z-index: 1000;
+
+        }
+
+        .dropdown-content a {
+            display: block;
+            padding: 12px 20px;
+            color: #333;
+            text-decoration: none;
+            transition: all 0.2s ease;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        .dropdown-content a:last-child {
+            border-bottom: none;
+        }
+
+        .dropdown-content a:hover {
+            background: #f8f9ff;
+            color: #667eea;
+            padding-left: 24px;
+        }
+
+        /* Show dropdown on hover */
+        .profile-dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .profile-dropdown:hover .dropdown-arrow {
+            transform: rotate(180deg);
+        }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            .navbar {
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .dropdown-content {
+                right: 50%;
+                transform: translateX(50%);
+                min-width: 160px;
+            }
+        }
+    </style>
+     <style>
+        .back-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #062b47;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 6px;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+
+        .back-btn:hover {
+            background-color: #055174;
+            /* Darker shade */
+            /* transform: scale(1.05); Slight zoom effect */
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
 
-<header>
-<h1>User Profile / Settings</h1>
+   <header class="navbar">
+        <h1>User profile</h1>
 
-<a href="profile.html" class="profile-link">
-<img src="icon2.png">
-<span id="profile-text">Hi, User</span>
-</a>
-</header>
+        <div class="profile-dropdown">
+            <a href="#" class="profile-link" id="profileLink">
+                <img src="./assets/images/icon2.png" alt="User Icon" id="profileIcon">
+                <span id="profile-text">Hi, User</span>
+                <svg class="dropdown-arrow" viewBox="0 0 24 24">
+                    <path d="M7 10l5 5 5-5z" />
+                </svg>
+            </a>
 
-<main>
+            <!-- Dropdown Menu -->
+            <div class="dropdown-content" id="profileDropdown">
+                <a href="profile.html">View Profile</a>
+                <a href="#" id="logoutLink">Logout</a>
+            </div>
+        </div>
+    </header>
+ <div style="display: flex; justify-content: center; margin-top: 5px;">
+        <a href="/" class="back-btn">
+            Back
+        </a>
+    </div>
 
-<!-- PROFILE VIEW -->
-<div class="section-box">
-<h2>Profile Information</h2>
-<p><strong>Name:</strong> <span id="view-name"></span></p>
-<p><strong>Email:</strong> <span id="view-email"></span></p>
-</div>
+    <main>
 
-<!-- EDIT PROFILE -->
-<div class="section-box">
-<h2>Edit Profile</h2>
+        <!-- PROFILE VIEW -->
+        <div class="section-box">
+            <h2>Profile Information</h2>
+            <p><strong>Name:</strong> <span id="view-name"></span></p>
+            <p><strong>Email:</strong> <span id="view-email"></span></p>
+        </div>
 
-<label>Update Name</label>
-<input type="text" id="name" placeholder="Enter new name">
+        <!-- EDIT PROFILE -->
+        <!-- EDIT PROFILE -->
+        <div class="section-box">
+            <h2>Edit Profile</h2>
 
-<label>Update Email</label>
-<input type="email" id="email" placeholder="Enter new email">
+            <label>Update Name</label>
+            <input type="text" id="name" placeholder="Enter new name">
 
-<label>Change Password</label>
-<input type="password" id="password" placeholder="Enter new password">
+            <label>Update Email</label>
+            <input type="email" id="email" placeholder="Enter new email">
 
-<button onclick="updateProfile()">Save Changes</button>
-<p id="update-msg" class="success"></p>
-</div>
+            <label>Update Phone</label>
+            <input type="tel" id="phone" placeholder="Enter phone number">
 
-<!-- DELETE ACCOUNT -->
-<div class="section-box">
-<h2>Delete Account</h2>
-<p class="warning">Warning: This action cannot be undone!</p>
-<button onclick="deleteAccount()">Delete Account</button>
-</div>
+            <label>Change Password</label>
+            <input type="password" id="password" placeholder="Enter new password">
 
-</main>
+            <button onclick="updateProfile()">Save Changes</button>
+            <p id="update-msg" class="success"></p>
+        </div>
 
-<script>
 
-let username = localStorage.getItem('username') || "Deepa";
-document.getElementById('profile-text').innerText = `Hi, ${username}`;
+        <!-- DELETE ACCOUNT -->
+        <div class="section-box">
+            <h2>Delete Account</h2>
+            <p class="warning">Warning: This action cannot be undone!</p>
+            <button onclick="deleteAccount()">Delete Account</button>
+        </div>
 
-// Load Users Data
-let users = JSON.parse(localStorage.getItem('users')) || {};
-if(!users[username]){
-users[username] = {name: username, email: "", password: ""};
-localStorage.setItem('users', JSON.stringify(users));
-}
+    </main>
 
-// Load Profile
-function loadProfile(){
-const user = users[username];
-document.getElementById('view-name').innerText = user.name;
-document.getElementById('view-email').innerText = user.email || "Not set";
-
-document.getElementById('name').value = user.name;
-document.getElementById('email').value = user.email;
-document.getElementById('password').value = "";
-}
-
-// Update Profile
-function updateProfile(){
-const newName=document.getElementById('name').value.trim();
-const newEmail=document.getElementById('email').value.trim();
-const newPassword=document.getElementById('password').value.trim();
-
-if(newName) users[username].name=newName;
-if(newEmail) users[username].email=newEmail;
-if(newPassword) users[username].password=newPassword;
-
-localStorage.setItem('users',JSON.stringify(users));
-
-document.getElementById('update-msg').innerText="Profile updated successfully!";
-setTimeout(()=>{document.getElementById('update-msg').innerText="";},3000);
-
-loadProfile();
-}
-
-// Delete Account
-function deleteAccount(){
-if(confirm("Are you sure you want to delete your account? This cannot be undone.")){
-delete users[username];
-localStorage.removeItem(username+'_income');
-localStorage.removeItem(username+'_expenses');
-localStorage.removeItem(username+'_budgets');
-localStorage.removeItem(username+'_budgetMonth');
-localStorage.removeItem('username');
-localStorage.setItem('users',JSON.stringify(users));
-
-alert("Account deleted successfully!");
-window.location.href="index.html";
-}
-}
-
-loadProfile();
-
-</script>
-
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/profile.js"></script>
 </body>
+
 </html>
