--- a/dashboard.html
+++ b/dashboard.html
@@ -301,7 +301,7 @@
 
 
   <header class="navbar">
-        <h1>Income Management</h1>
+        <h1>Finance Tracker</h1>
 
         <div class="profile-dropdown">
             <a href="#" class="profile-link" id="profileLink">
