--- a/budget.html
+++ b/budget.html
@@ -119,6 +119,12 @@
             font-weight: 500;
         }
 
+        .error {
+            color: red;
+            margin-top: 8px;
+            font-weight: 500;
+        }
+
         /* BUDGET LIST */
         .budget-item {
             background: white;
