--- a/expense.html
+++ b/expense.html
@@ -113,6 +113,11 @@
             margin-top: 8px;
             font-weight: 500;
         }
+        .error {
+             color: red;
+            margin-top: 8px;
+            font-weight: 500;
+        }
 
         /* Filters */
         .filters {
